--- a/content/blog-posts/fuggveny-sum.mdx
+++ b/content/blog-posts/fuggveny-sum.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'A OSSZEG (SUM) függvény használata'
+title: 'A ÖSSZEG (SUM) függvény használata'
 abstract: 'Egy izgalmas és hasznos Excel függvényt fogunk bemutatni: az FKERES függvényt. Ha gyakran dolgozol nagy adatkészletekkel, vagy gyakran kell keresni az Excel táblázataidban, ez a függvény a te barátod lesz.'
 publishedOn: '2023-11-04T17:02:00-0400'
 ---
