functions on separate page

--- a/content/functions/fuggveny-vlookup.mdx
+++ b/content/functions/fuggveny-vlookup.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Az FKERES (VLOOKUP) függvény használata'
+title: 'FKERES (VLOOKUP)'
 abstract: 'Egy izgalmas és hasznos Excel függvényt fogunk bemutatni: az FKERES függvényt. Ha gyakran dolgozol nagy adatkészletekkel, vagy gyakran kell keresni az Excel táblázataidban, ez a függvény a te barátod lesz.'
 publishedOn: '2023-11-04T15:49:00-0400'
 ---
